--- a/frontend/webapp-todo/src/modules/Home/Home.module.scss
+++ b/frontend/webapp-todo/src/modules/Home/Home.module.scss
@@ -1,8 +1,8 @@
 .main {
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
 }
